# stand_alone_sub_package_folder_example

./: .gitignore  README.md  setup.cfg  setup.py  setup_minimal.py
main_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
main_package/python_module1/: __init__.py  python_module1.py
main_package/python_module2/: __init__.py  python_module2.py
main_package/stand_alone_subpackage/: README.md  setup.cfg
main_package/stand_alone_subpackage/stand_alone_subpackage/: __init__.py  python_module.py
main_package/stand_alone_subpackage/stand_alone_subpackage/sub_package/: __init__.py  python_module.py
