[metadata]
name = main_package
version = 0.0.0
description = Example repository for having a stand alone python package as a submodule of another python package.

[options]
packages=find_namespace:

[options.packages.find]
where=
    stand_alone_subpackage
; exclude=
;     stand_alone_subpackage.stand_alone_subpackage
; include=
;     stand_alone_subpackage.stand_alone_subpackage.stand_alone_subpackage