[metadata]
name = main_package
version = 0.0.0
description = Example repository for having a stand alone python package as a submodule of another python package.

[options]
packages=find_namespace:

; [options.packages.find]
; where=
    ; .
; exclude=
    ; main_package.stand_alone_subpackage.stand_alone_subpackage
; include=
    ; main_package.stand_alone_subpackage.stand_alone_subpackage.stand_alone_subpackage